--- a/css/styles.css
+++ b/css/styles.css
@@ -11303,7 +11303,7 @@ textarea.form-control-lg {
 header.masthead {
   position: relative;
   background-color: #343a40;
-  background: url("../assets/img/bg-masthead.jpg") no-repeat center center;
+  background: url("../assets/img/masthead.jpg") no-repeat center center;
   background-size: cover;
   padding-top: 3rem;
   padding-bottom: 7rem;
